# Branch_Predictor

./: CMakeLists.txt  PROJECT_DESCRIPTION.md  QUICK_REFERENCE.md  README.md
include/: BranchPredictor.h  BranchTargetBuffer.h  TraceReader.h  TwoBitBranchPredictor.h
src/: BranchPredictor.cpp  BranchTargetBuffer.cpp  TraceReader.cpp  TwoBitBranchPredictor.cpp  TwoBitPredictorMain.cpp  branch_sim  branch_sim_TwoBit  main.cpp  plot_btb_overhead.py  plot_btb_overheadTwoBit.py  twobit_visualise_results.py
